--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,14 +24,34 @@ header {
     padding: 10px;
 }
 
+/* Hero Section */
+
 #hero img {
     width: 300px;
 }
+
+/* Bio Section */
 
 #bio {
     text-align: center;
 }
 
+/* Hobbies Section */
+
 #hobbies ul li:nth-child(even) {
     color:#000
+}
+
+/* Gallery Section */
+
+#gallery {
+    border: 2px solid #5679F0;
+}
+
+#gallery img {
+    max-width: 100%;
+}
+
+#gallery figure {
+    text-align: center;
 }
