--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,8 +7,6 @@ body {
 h1, h2, h3, h4, h5, h6{
     font-family: "Neuton";
     text-align: center;
-}
-h1 {
     font-size:40pt;
 }
 
@@ -46,6 +44,7 @@ header {
 
 #gallery {
     border: 2px solid #5679F0;
+    margin-bottom:2rem;
 }
 
 #gallery img {
@@ -54,4 +53,39 @@ header {
 
 #gallery figure {
     text-align: center;
+}
+
+/* Literature */
+#lit {
+    border: 2px solid #5679F0;
+    margin-bottom:2rem;
+}
+
+#lit div{
+    padding:2rem;
+    max-width: 40rem;
+    margin: 0 auto;
+}
+
+#lit div p {
+    padding: 0.3rem 0;
+    clear:both;
+}
+
+/* Dropcaps */
+
+#lit div p:nth-child(3n+1):first-letter {
+    color:#5679F0;
+    background-image:radial-gradient(#FFF,#A3721C);
+    float:left;
+    font-size:3em;
+    padding: .25em;
+    margin-right: .25em;
+    line-height: .65;
+    border:4px outset#5679F0;
+    font-family:"Grenze Gotisch";
+    text-shadow:2px 2px 3px rgba(0,0,0,.5);
+    box-shadow:5px 5px 5px rgba(0,0,0,.5);
+    border-top-left-radius: .2em;
+    border-bottom-right-radius: .2em;
 }
