--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,10 @@ h1, h2, h3, h4, h5, h6{
     font-size:40pt;
 }
 
+h2 {
+    margin: .1em;
+}
+
 header {
     text-align: center;
 }
@@ -35,6 +39,12 @@ header {
 }
 
 /* Hobbies Section */
+
+section#hobbies {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 #hobbies ul li:nth-child(even) {
     color:#000
@@ -88,4 +98,19 @@ header {
     box-shadow:5px 5px 5px rgba(0,0,0,.5);
     border-top-left-radius: .2em;
     border-bottom-right-radius: .2em;
+}
+
+@media screen and (min-width: 60em) {
+    figure{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    figcaption {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2rem;
+        margin-left: 1rem;
+    }
 }
