--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,7 +84,7 @@ section#hobbies {
 
 /* Dropcaps */
 
-#lit div p:nth-child(3n+1):first-letter {
+#lit div p: first-child:first-letter {
     color:#5679F0;
     background-image:radial-gradient(#FFF,#A3721C);
     float:left;
@@ -99,7 +99,7 @@ section#hobbies {
     border-top-left-radius: .2em;
     border-bottom-right-radius: .2em;
 }
-
+/* tablet size */
 @media screen and (min-width: 60em) {
     figure{
         display: grid;
@@ -113,4 +113,36 @@ section#hobbies {
         font-size: 2rem;
         margin-left: 1rem;
     }
+
+    figure img{
+        width: 100%;
+    }
+
+    #lit div {
+        max-width: 100%;
+        columns: 20rem;
+    }
+}
+
+/* large screen size */
+
+@media screen and (min-width: 100em) {
+
+    #gallery {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    hr {
+        display: none;
+    }
+
+    #gallery h2 {
+        grid-column: 1/-1;
+    }
+
+    figure{
+        display:block;
+    }
+
 }
