--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -34,7 +34,7 @@ main{
 
 
 /* logo */
-.logo{
+.logo {
     display: flex;
     align-items:center;
 }
@@ -44,13 +44,13 @@ main{
     width: 6vw;
 }
 
-logo h1{
+logo h1 {
     font-size: 1.2em;
 }
 
 /* navigation list */
 
-.navbar-links li{
+.navbar-links li {
     list-style: none;
     display: block;
     padding: 0.5em 0;
@@ -69,6 +69,13 @@ logo h1{
     letter-spacing: 2px;
     text-decoration: none;
     display: inline-block;
+}
+
+.navbar-links a:hover,
+.navbar-links a:focus {
+    filter:invert(1);
+    border-radius:10px;
+    outline: none;
 }
 
 
