--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -33,8 +33,8 @@ main{
     padding: 1rem;
 }
 
-
 /* logo */
+
 .logo {
     display: flex;
     align-items:center;
@@ -64,8 +64,8 @@ logo h1 {
 
 .navbar-links a {
     color: whitesmoke;
-    background-attachment: #333;
-    font-size:1.5rem;
+    background-color: #333;
+    font-size: 2;
     padding: 1rem 1.25rem;
     letter-spacing: 2px;
     text-decoration: none;
@@ -74,16 +74,26 @@ logo h1 {
 
 .navbar-links a:hover,
 .navbar-links a:focus {
-    filter:invert(1);
-    border-radius:10px;
+    color: #333;
+    background-color: whitesmoke;
+    border-radius: 10px;
     outline: none;
 }
-
-
-
 
 /* 
 media query for non-mobile nav bar
 min-width set to width of nav elements 
 such that no text wraps 
 */
+
+@media screen (min-width: 60rem) {
+    .navbar {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .navbar-ul {
+        display: flex;
+        justify-content: space-between;
+    }    
+}
